Use VERSION instead of NETATALK_VERSION.

--- a/distrib/initscripts/Makefile.am
+++ b/distrib/initscripts/Makefile.am
@@ -14,7 +14,7 @@ systemddir = /lib/systemd/system
 	    -e s@:SBINDIR:@${sbindir}@ \
 	    -e s@:ETCDIR:@${pkgconfdir}@ \
 	    -e s@:PKGLIBEXECDIR:@${pkglibexecdir}@ \
-	    -e s@:NETATALK_VERSION:@${NETATALK_VERSION}@ \
+	    -e s@:VERSION:@${VERSION}@ \
 	    <$< >$@
 
 GENERATED_FILES = \
