--- a/man/man8/Makefile.am
+++ b/man/man8/Makefile.am
@@ -10,7 +10,7 @@ SUFFIXES = .tmpl .
 	    -e s@:ETCDIR:@${pkgconfdir}@ \
 	    -e s@:LIBDIR:@${libdir}@ \
 	    -e s@:LIBEXECDIR:@${libexecdir}@ \
-	    -e s@:NETATALK_VERSION:@${NETATALK_VERSION}@ \
+	    -e s@:VERSION:@${VERSION}@ \
 	    <$< >$@
 
 GENERATED_MANS    = afpd.8 cnid_dbd.8 cnid_metad.8 atalkd.8 papd.8 papstatus.8 psf.8 timelord.8
