--- a/etc/afpd/Makefile.am
+++ b/etc/afpd/Makefile.am
@@ -51,6 +51,7 @@ afpd_LDADD =  \
 afpd_LDFLAGS = -export-dynamic 
 
 afpd_CFLAGS = \
+	-Wno-nonnull \
 	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/sys \
 	@SLP_CFLAGS@ @ZEROCONF_CFLAGS@ \
