--- a/libatalk/Makefile.am
+++ b/libatalk/Makefile.am
@@ -1,7 +1,7 @@
 
 # Makefile.am for libatalk/
 
-SUBDIRS = acl adouble bstring compat cnid dsi tdb util unicode vfs
+SUBDIRS = acl adouble asp atp bstring compat cnid dsi nbp netddp util unicode vfs
 
 lib_LTLIBRARIES = libatalk.la
 
@@ -13,8 +13,9 @@ libatalk_la_LIBADD  = \
 	bstring/libbstring.la \
 	compat/libcompat.la	\
 	dsi/libdsi.la		\
+	nbp/libnbp.la		\
+	netddp/libnetddp.la \
 	util/libutil.la		\
-	tdb/libtdb.la       \
 	unicode/libunicode.la \
 	vfs/libvfs.la
 
@@ -24,23 +25,10 @@ libatalk_la_DEPENDENCIES = \
 	bstring/libbstring.la \
 	compat/libcompat.la	\
 	dsi/libdsi.la		\
+	nbp/libnbp.la		\
+	netddp/libnetddp.la \
 	util/libutil.la		\
-	tdb/libtdb.la       \
 	unicode/libunicode.la \
 	vfs/libvfs.la
 
 libatalk_la_LDFLAGS = -static
-
-if USE_APPLETALK
-SUBDIRS +=  asp atp nbp netddp
-libatalk_la_LIBADD += \
-	asp/libasp.la		\
-	atp/libatp.la		\
-	nbp/libnbp.la		\
-	netddp/libnetddp.la
-libatalk_la_DEPENDENCIES += \
-	asp/libasp.la		\
-	atp/libatp.la		\
-	nbp/libnbp.la		\
-	netddp/libnetddp.la
-endif
