Enable -Wall -Werror -- the codebase now passes this test.

--- a/configure.ac
+++ b/configure.ac
@@ -1052,6 +1052,8 @@ NETATALK_WEBMIN
 
 dnl --------------------- last minute substitutions
 
+CFLAGS="-Wall -Werror $CFLAGS"
+
 AC_SUBST(LIBS)
 AC_SUBST(CFLAGS)
 AC_SUBST(OVERWRITE_CONFIG)
